# ip-file-sharing-desktop

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/certificate/: generator.rs
backend/src/server/: file_handler.rs  https_server.rs  mdns_handler.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
