[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.9", features = ["multipart"] } # Version may vary, use the latest stable
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] } # Optional for future CORS support
rcgen = "0.13.1"
rustls = "0.23.17"